attached_assets/Pasted-formatUtils-ts-31-Uncaught-Error-Module-build-failed-from-node-modules-babel-loader-lib-index-js-1751946755793_1751946755793.txt
formatUtils.ts:31 Uncaught Error: Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/src/utils/index.ts: 'return' outside of function. (119:2) (at formatUtils.ts:31:1)

[0m [90m 117 |[39m   [36mconst[39m experience [33m=[39m [33mMath[39m[33m.[39mfloor(culturalCapital [33m*[39m [35m0.5[39m)[33m;[39m
 [90m 118 |[39m
[31m[1m>[22m[39m[90m 119 |[39m   [36mreturn[39m {
 [90m     |[39m   [31m[1m^[22m[39m
 [90m 120 |[39m     culturalCapital[33m,[39m
 [90m 121 |[39m     experience
 [90m 122 |[39m   }[33m;[39m[0m
    at constructor (/home/runner/workspa…lib/index.js:363:19)
    at TypeScriptParserMixin.raise (/home/runner/workspa…ib/index.js:6612:19)
    at TypeScriptParserMixin.parseReturnStatement (/home/runner/workspa…b/index.js:13069:12)
    at TypeScriptParserMixin.parseStatementContent (/home/runner/workspa…b/index.js:12730:21)
    at TypeScriptParserMixin.parseStatementContent (/home/runner/workspa…ib/index.js:9483:18)
    at TypeScriptParserMixin.parseStatementLike (/home/runner/workspa…b/index.js:12699:17)
    at TypeScriptParserMixin.parseModuleItem (/home/runner/workspa…b/index.js:12676:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspa…b/index.js:13249:36)
    at TypeScriptParserMixin.parseBlockBody (/home/runner/workspa…b/index.js:13242:10)
    at TypeScriptParserMixin.parseProgram (/home/runner/workspa…b/index.js:12555:10)
    at TypeScriptParserMixin.parseTopLevel (/home/runner/workspa…b/index.js:12545:25)
    at TypeScriptParserMixin.parse (/home/runner/workspa…b/index.js:14423:10)
    at TypeScriptParserMixin.parse (/home/runner/workspa…b/index.js:10100:18)
    at parse (/home/runner/workspa…b/index.js:14457:38)
    at parser (/home/runner/workspa…rser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/runner/workspa…alize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/runner/workspa…tion/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/runner/workspa…/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/home/runner/workspa…ync/index.js:261:32)
    at /home/runner/workspa…ync/index.js:273:13
    at async.call.result.err.err (/home/runner/workspa…ync/index.js:223:11)
    at ./src/utils/index.ts (formatUtils.ts:31:1)
    at options.factory (react refresh:37:1)
    at __webpack_require__ (bootstrap:22:1)
    at fn (hot module replacement:61:1)
    at hotRequire (react refresh:20:1)
    at ./src/components/features/worship/Worship.tsx (Worship.css:78:1)
    at options.factory (react refresh:37:1)
    at __webpack_require__ (bootstrap:22:1)
    at fn (hot module replacement:61:1)
    at hotRequire (react refresh:20:1)
./src/utils/index.ts	@	formatUtils.ts:31
options.factory	@	react refresh:37
__webpack_require__	@	bootstrap:22
fn	@	hot module replacement:61
hotRequire	@	react refresh:20
./src/components/features/worship/Worship.tsx	@	Worship.css:78
options.factory	@	react refresh:37
__webpack_require__	@	bootstrap:22
fn	@	hot module replacement:61
hotRequire	@	react refresh:20
./src/components/index.ts	@	Worship.tsx:463
options.factory	@	react refresh:37
__webpack_require__	@	bootstrap:22
fn	@	hot module replacement:61
hotRequire	@	react refresh:20
./src/App.tsx	@	App.css:78
options.factory	@	react refresh:37
__webpack_require__	@	bootstrap:22
fn	@	hot module replacement:61
hotRequire	@	react refresh:20
./src/index.ts	@	useOnboarding.ts:25
options.factory	@	react refresh:37
__webpack_require__	@	bootstrap:22
(anonymous)	@	startup:7
(anonymous)	@	startup:7
react refresh:37 WebSocket connection to 'wss://61c70517-4d44-4d51-a095-1b1521cdfab9-00-25vonk9ql7rqp.sisko.replit.dev:3000/ws' failed: Error during WebSocket handshake: Unexpected response code: 502
options.factory	@	react refresh:37
__webpack_require__	@	bootstrap:22
(anonymous)	@	startup:5
(anonymous)	@	startup:7
Show 3 more frames
WebSocketClient.js:13 WebSocket connection to 'wss://61c70517-4d44-4d51-a095-1b1521cdfab9-00-25vonk9ql7rqp.sisko.replit.dev:3000/ws' failed: Error during WebSocket handshake: Unexpected response code: 502
Show 3 more frames
WebSocketClient.js:13 WebSocket connection to 'wss://61c70517-4d44-4d51-a095-1b1521cdfab9-00-25vonk9ql7rqp.sisko.replit.dev:3000/ws' failed: Error during WebSocket handshake: Unexpected response code: 502
Show 3 more frames
WebSocketClient.js:13 WebSocket connection to 'wss://61c70517-4d44-4d51-a095-1b1521cdfab9-00-25vonk9ql7rqp.sisko.replit.dev:3000/ws' failed: Error during WebSocket handshake: Unexpected response code: 502
Show 3 more frames
WebSocketClient.js:13 WebSocket connection to 'wss://61c70517-4d44-4d51-a095-1b1521cdfab9-00-25vonk9ql7rqp.sisko.replit.dev:3000/ws' failed: Error during WebSocket handshake: Unexpected response code: 502
Show 3 more frames
WebSocketClient.js:13 WebSocket connection to 'wss://61c70517-4d44-4d51-a095-1b1521cdfab9-00-25vonk9ql7rqp.sisko.replit.dev:3000/ws' failed: Error during WebSocket handshake: Unexpected response code: 502
Show 3 more frames
WebSocketClient.js:13 WebSocket connection to 'wss://61c70517-4d44-4d51-a095-1b1521cdfab9-00-25vonk9ql7rqp.sisko.replit.dev:3000/ws' failed: Error during WebSocket handshake: Unexpected response code: 502
Show 3 more frames